# legaltech-notice-agent

./: .env.example  .gitignore  Dockerfile  README.md  SEO_BACKLINK_STRATEGY.md  add_css.py  add_micro_polish.py  append_css.py  apply_cf_function.py  apply_js_fix.py  apprunner.yaml  check_logs.sh  convert.py  convert2.py  convert3.py  create_page.py  final_convert.py  final_convert2.py  fix_grid.py  fix_hero_spacing.py  fix_html_script.py  fix_objection.py  fix_polish.py  gen_competitor_gap_pages.py  gen_notice_pages.py  gen_sector_pages.py  generate_directory.py  generate_seo_assets.py  generate_seo_pages.py  health_report.py  make_db.py  mass_generate_cities.py  mass_generate_pages.py  mass_generate_templates.py  output_tier.txt  part1.txt  patch_app.py  patch_app_css.py  patch_appjs_edit.py  patch_jobs.py  (+23 more)
examples/: enriched_request.json  meta_page_block.json  typed_request.json  voice_request.json
frontend/: package-lock.json
static/: about.html  act-fibernet-complaints.html  admin.html  agoda-complaints.html  air-india-complaints.html  airbnb-complaints.html  airtel-complaints.html  ajio-complaints.html  akasa-air-complaints.html  amazon-complaints.html  app.js  apple-complaints.html  axis-bank-complaints.html  blinkit-complaints.html  blog.html  bookmyshow-complaints.html  broker-fraud.html  bsnl-complaints.html  byjus-complaints.html  cleartrip-complaints.html  coaching-center-fee-refund.html  consumer-complaint-automobile.html  consumer-complaint-bank.html  consumer-complaint-courier.html  consumer-complaint-ecommerce.html  consumer-complaint-education.html  (+171 more)
(+68 files in other folders)
